--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,8 @@ main.contacto {
     display: flex;
     justify-content: space-evenly;
     padding: 1rem;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .card-body {
@@ -114,8 +116,7 @@ footer{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 5px;
-    padding-right: 30px;
+    padding: 1rem;
 
 }
 
@@ -204,4 +205,36 @@ main.details .card-body {
 
 .navbar-collapse {
     flex-grow: 0;
+}
+
+/******************************/
+/******** RESPONSIVE *********/
+/******************************/
+
+@media (max-width: 520px){
+    .filtro {
+        /* display: flex;
+        align-items: center;
+        justify-content: space-between; */
+        flex-direction: column;
+
+    }
+
+    .buscador {
+        /* padding-right: 1rem; */
+        padding: 1rem;
+        width: 100%;
+    }
+
+    .checkbox {
+        /* padding: 2rem;
+        display: flex;
+        gap: 0.5rem; */
+        padding: 1rem;
+        display: flex;
+        gap: 1.5rem;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
 }
