--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,5 @@
+
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -34,6 +36,15 @@ header .carousel-item img{
     height: 100%;
     height: 20rem;
     object-fit: cover;
+}
+
+.carousel-caption h5 {
+    font-size: 5rem;
+    filter: drop-shadow(3px 3px 1px rgb(217,3,104));
+}
+
+.carousel-caption {
+    bottom: 5rem;
 }
 
 main{ /*Modiique el  min-height de 75 a 50*/
@@ -191,7 +202,8 @@ main.details {
 
 main.details .card {
     padding: 0.5rem;
-    background-color: greenyellow;
+    /* background-color: greenyellow; */
+    background-color: rgb(217,3,104);
     display: flex;
     flex-direction: row;
     width: 80%;
