add function checkbox + media queries max + nav

--- a/assets/style.css
+++ b/assets/style.css
@@ -96,6 +96,7 @@ main.contacto {
     padding: 1rem;
     flex-wrap: wrap;
     gap: 1rem;
+    margin: 0;
 }
 
 .card-body {
@@ -226,8 +227,8 @@ main.details .card-body {
 /******************************/
 /******** RESPONSIVE *********/
 /******************************/
-
-@media (max-width: 520px){
+/* (max-width: 520px) (750px)*/
+@media (max-width: 840px){
     .filtro {
         /* display: flex;
         align-items: center;
