--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,3 @@
-
-
 * {
     box-sizing: border-box;
     padding: 0;
@@ -90,13 +88,28 @@ main.contacto {
     padding-right: 1rem;
 }
 
+.error {
+    color: red;
+    text-align: center;
+    /* display: none; */
+}
+
 .row {
     display: flex;
     justify-content: space-evenly;
     padding: 1rem;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 2rem;
     margin: 0;
+}
+
+.card{
+    box-shadow: 5px 5px 10px;
+}
+
+.card:hover{
+    background-color: rgba(255, 255, 0, 0.260);
+    transition: 0.5s;
 }
 
 .card-body {
