--- a/assets/style.css
+++ b/assets/style.css
@@ -125,6 +125,8 @@ main.contacto {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: darkblue;
+    color: aliceblue;
 }
 
 main.tabla {
@@ -227,10 +229,10 @@ main.details .card {
     /* background-color: greenyellow; */
     background-color: rgb(217, 3, 104);
     display: flex;
-    flex-direction: row;
-    width: 80%;
+    width: 100%;
     align-items: center;
     gap: 1rem;
+    flex-direction: row;
 }
 
 main.details .card-body {
@@ -286,7 +288,7 @@ main.details .card-body {
         align-items: center;
         gap: 1rem; */
         display: block;
-        width: 70%;
+        width: 100%;
     }
 
 }
