update details.js + style

--- a/assets/style.css
+++ b/assets/style.css
@@ -59,6 +59,8 @@ header.cabecera {
 
 main.details {
     min-height: 86vh;
+    width: 80%;
+    margin-left: 4em;
 }
 
 footer.pie {
@@ -125,8 +127,8 @@ main.contacto {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: darkblue;
-    color: aliceblue;
+    /* background-color: darkblue; */
+    /* color: aliceblue; */
 }
 
 main.tabla {
@@ -235,13 +237,21 @@ main.details .card {
     flex-direction: row;
 }
 
-main.details .card-body {
+main.details .info-details {
     background-color: lightsteelblue;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 80%;
-    color: darkblue
+    color: darkblue;
+}
+
+.info-details .card-footer{
+    background-color: darkblue;
+    color: aliceblue;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .navbar-collapse {
